<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/card"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/gps"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-50dp"
        app:cardCornerRadius="@dimen/_30sdp"
        app:cardElevation="@dimen/_8ssp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:background="@color/white">
            <TextView
                android:id="@+id/txtHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/location_services"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:id="@+id/txtHeading1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtHeading"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/_5ssp"
                android:text="@string/info_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtHeading1"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:background="@android:color/holo_green_light"
                android:text="@string/enable_location_service"
                android:textAllCaps="false"
                tools:ignore="DuplicateClickableBoundsCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtHeading1"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:background="@android:color/holo_red_light"
                android:text="@string/disable_location_service"
                android:visibility="gone"
                android:textAllCaps="false" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:id="@+id/progressBar"/>

</RelativeLayout>